{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "93cc3b3d-d020-4d8b-8598-1210bd1d2cbd",
            "actions": [
                {
                    "name": "PlayerMovement(Keyboard)",
                    "type": "Button",
                    "id": "c92e9921-9258-44bb-9c5e-31f4d2e5ad86",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PlayerJump",
                    "type": "PassThrough",
                    "id": "324aa8c8-a35d-460c-86e8-f42d4e05989f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PlayerAttack",
                    "type": "PassThrough",
                    "id": "9b058838-79e4-41f6-a9e7-09b80d8dca4b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "HorizontalMovement(WASD)",
                    "id": "2106ed58-2342-4d6e-b9cb-033c7f2dbcbb",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement(Keyboard)",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a2c11e86-f6a3-46d5-949b-408e840b8606",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement(Keyboard)",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "06a815e4-990c-441c-9e9f-b1138f5949a1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement(Keyboard)",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "HorizontalMovement(ARROWS)",
                    "id": "3d514c97-df0a-41fd-ba90-1bd836e328c9",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement(Keyboard)",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d4659211-4577-4f76-8644-fab6453ce9f4",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement(Keyboard)",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bc63f4db-2a3e-427e-aa5b-e5f742a340fb",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement(Keyboard)",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "HorizontalMovement(Gamepad)",
                    "id": "c858f84e-5a0e-4c82-8000-4b58781e0636",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement(Keyboard)",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5f431d52-3b99-43ab-b1a2-ecd95da46a2a",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement(Keyboard)",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2f0eff71-5194-4d75-a5ff-0e0573504ea7",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement(Keyboard)",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4fb20f9f-fb82-4a24-adba-9390df38db00",
                    "path": "<Keyboard>/y",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16ce5fc5-50d8-42cf-bd56-57dd8211c6ac",
                    "path": "<Keyboard>/numpad5",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5bd980bd-5428-4e0f-aacd-bc4ff8ed9355",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c216c27-172f-4167-8ff9-c834f034c28a",
                    "path": "<Keyboard>/g",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bee72358-6705-42a9-8483-c33234595be0",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3adb8bba-1535-4449-b17e-e1b0a5b45129",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01dfafb1-b5c4-40a2-b23c-1060e1376b28",
                    "path": "<DualShockGamepad>/buttonWest",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}